--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,11 +8,11 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="")
 FullRebuild=False
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
@@ -69,5 +69,11 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
++DirectoriesToAlwaysStageAsUFS=(Path="Movies")
 +DirectoriesToAlwaysStageAsNonUFS=(Path="FMOD")
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=False
++StartupMovies=GameIntro720
 
