--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/ThirdPersonCPP/Maps/EmptyWorld.EmptyWorld
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 GlobalDefaultGameMode=/Game/GameMode/GameAsset3_SpaceGameMode.GameAsset3_SpaceGameMode_C
 
@@ -18,4 +18,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="SS_GameAsset3GameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="SS_GameAsset3Character")
 NearClipPlane=14.000000
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=False
 
