--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/EmptyWorld.EmptyWorld
+GameDefaultMap=/Game/ThirdPersonCPP/Maps/Cinematics.Cinematics
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 GlobalDefaultGameMode=/Game/GameMode/GameAsset3_SpaceGameMode.GameAsset3_SpaceGameMode_C
 
