--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -40,11 +40,12 @@ InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
-bCookAll=False
+bCookAll=True
 bCookMapsOnly=False
-bCompressed=False
+bCompressed=True
 bSkipEditorContent=False
 bSkipMovies=False
++UFSMovies=GameIntro720
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
 -IniKeyBlacklist=rsa.privateexp
@@ -69,6 +70,9 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/ThirdPersonCPP/Maps/BuraasLevel")
++MapsToCook=(FilePath="/Game/ThirdPersonCPP/Maps/ChristianLevel")
++MapsToCook=(FilePath="/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap")
 +DirectoriesToAlwaysStageAsUFS=(Path="Movies")
 +DirectoriesToAlwaysStageAsNonUFS=(Path="FMOD")
 
